--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Gunnar Farnebäck <gunnar.farneback@contextvision.se>"]
 version = "0.1.0"
 
 [deps]
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Multibreak = "2db7fbaf-c681-4fb2-9fc5-9b884bdd742d"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
